# advent-of-code-2022

./: Cargo.toml
inputs/: day17_output.txt
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day12.rs  day14.rs  day16.rs  day17.rs  day18.rs  day2.rs  day20.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs  main.rs
src/day1/: mod.rs
