[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
authors = ["Malte Schwitters <malte.schwitters@worldiety.de>"]

[dependencies]
env_logger = "0.9" # log implementation
log = "0.4" # logging facade
regex = "1.7.0"
trees = "0.2.1"
colored = "2.0.0" # colored console output

[[bin]]
path = "src/main.rs"
name = "advent_of_code"